version/0.11/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

=========
Examples
=========
End-to-end examples show how you can use PyTwin. If the ``pytwin`` package is installed on your machine,
you can download these examples as Python files or Jupyter notebooks and run them locally.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Twin creation examples
======================
These examples show how to use additional functionalities to create TWIN file (for example using PyAEDT).



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Static ROM creation, Twin generation and evaluation">

.. only:: html

  .. image:: /examples/00-twin_creation/images/thumb/sphx_glr_00-TBROM_Twin_creation_evaluation_thumb.png
    :alt:

  :doc:`/examples/00-twin_creation/00-TBROM_Twin_creation_evaluation`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Static ROM creation, Twin generation and evaluation</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Twin evaluation examples
=========================
These examples show how to use the evaluation workflow in a TWIN file.
Included are multiple workflow demonstrations such as single evaluation of a dynamic model, parametric sweep analysis
(static/dynamic models), evaluation with states saving and loading.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Twin evaluation">

.. only:: html

  .. image:: /examples/01-twin_examples/images/thumb/sphx_glr_00-coupledClutches_thumb.png
    :alt:

  :doc:`/examples/01-twin_examples/00-coupledClutches`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Twin evaluation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parametric dynamic twin evaluation">

.. only:: html

  .. image:: /examples/01-twin_examples/images/thumb/sphx_glr_01-electricRange_thumb.png
    :alt:

  :doc:`/examples/01-twin_examples/01-electricRange`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parametric dynamic twin evaluation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parametric twin evaluation of a response surface ROM">

.. only:: html

  .. image:: /examples/01-twin_examples/images/thumb/sphx_glr_02-heatExchangerRS_thumb.png
    :alt:

  :doc:`/examples/01-twin_examples/02-heatExchangerRS`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parametric twin evaluation of a response surface ROM</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Twin evaluation of a scalar dynamic ROM">

.. only:: html

  .. image:: /examples/01-twin_examples/images/thumb/sphx_glr_03-scalarDROM_thumb.png
    :alt:

  :doc:`/examples/01-twin_examples/03-scalarDROM`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Twin evaluation of a scalar dynamic ROM</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

TBROM evaluation examples
=========================
These examples show how to use PyTwin to evaluate field results from TBROM included in a TWIN file.
Multiple workflows are demonstrated such as image and field data generation (with possible processing of data to other
Ansys tools like Fluent or Mechanical), TBROM evaluation with input field parameterization, output field visualization
for detailed post processing (including projection on CFD/FEA meshes).



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to load and evaluate a twin model to visualize ROM results in the form of images with predefined views. The script takes the inputs to evaluate the TBROM (twin builder ROM) and displays the corresponding image. A first image is generated using the point cloud-based ROM Viewer embedded in the twin runtime. The second image is generated by loading the ROM results and postprocessing the CFD mesh using PyFluent. Finally, ROM results are postprocessed in the 3D viewer enabled by PyFluent. For more information, see the PyFluent-Visualization documentation.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_00-TBROM_images_thumb.png
    :alt:

  :doc:`/examples/02-tbrom_examples/00-TBROM_images`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example for images generation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to load and evaluate a twin model to predict CFD results in the form of temperature fields. Temperature fields are used as inputs for an FEA thermal structural analysis of a T-junction that considers the mixing of two different flow temperatures. The example uses PyTwin to evaluate the twin results and convert them to an appropriate format. It then uses PyMAPDL to load the FEA model, apply the temperature loads coming from the twin, and perform the thermal structural analysis.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_01-TBROM_dataTransfer_pyMAPDL_thumb.png
    :alt:

  :doc:`/examples/02-tbrom_examples/01-TBROM_dataTransfer_pyMAPDL`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Twin evaluation of a 3D field ROM and data transfer to FEA model inputs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use PyTwin to load and evaluate a twin model that has a field ROM with inputs parameterized by both scalar and field data. The example also shows how to evaluate the output field data in the form of snapshots.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_02-TBROM_input_field_thumb.png
    :alt:

  :doc:`/examples/02-tbrom_examples/02-TBROM_input_field`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example for input field snapshot projection and snapshot generation on demand</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how the example given in ref_example_TBROM_inputField can be modified to take inputs as Numpy arrays, rather than reading from disk. Similarly, outputs are produced as Numpy arrays.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_03-TBROM_input_numpy_field_thumb.png
    :alt:

  :doc:`/examples/02-tbrom_examples/03-TBROM_input_numpy_field`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example for field snapshot input and output as Numpy array</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to load and evaluate a twin model, and visualize the ROM results on a CFD mesh. Once the twin model is evaluated, PyDPF is used to read in the CFD mesh on which the ROM results will be projected. PyVista is then used to perform the 3D visualization with different options. For more information, see the PyDPF documentation and PyVista documentation.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_04-TBROM_CFD_mesh_based_visualization_thumb.png
    :alt:

  :doc:`/examples/02-tbrom_examples/04-TBROM_CFD_mesh_based_visualization`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example with CFD mesh based visualization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to load and evaluate a twin model, and visualize the ROM results on a FEA mesh. Once the twin model is evaluated, PyDPF is used to read in the FEA mesh on which the ROM results will be projected. PyVista is then used to perform the 3D visualization with different options. For more information, see the PyDPF documentation and PyVista documentation.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_05-TBROM_FEA_mesh_based_visualization_thumb.png
    :alt:

  :doc:`/examples/02-tbrom_examples/05-TBROM_FEA_mesh_based_visualization`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example with FEA mesh based visualization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to perform different types of static structural analysis using 3D field ROM. A static structural model of a dog bone is created with Ansys Mechanical. A fixed support is applied on the right hand side, while a remote force is supplied on the left hand side. A non-linear structural analysis with plastic material behavior (using steel) is performed to compute the resulting stress field and associated displacement. A static ROM has been generated out of the original 3D model, so that the resulting Twin model can be evaluated using PyTwin, giving the possibilities to evaluate multiple configurations and operating conditions quickly, while keeping predictions accuracy similar to original 3D FEA model. The PyTwin worklow illustrates different APIs usage to evaluate the models at different conditions, visualize 3D detailed field results, as well as performing optimization and inverse problems.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_06-TBROM_FEA_static_structural_optimization_thumb.png
    :alt:

  :doc:`/examples/02-tbrom_examples/06-TBROM_FEA_static_structural_optimization`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Static structural analysis and optimization using 3D field ROM</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use PyTwin to load and evaluate a twin model built upon a parametric field history ROM. Such ROM, created with Static ROM Builder, has parameters that can be changed from one evaluation to another, and will output field predictions over a time grid. The example shows how to evaluate and post process the results at different time points.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_07-TBROM_parametric_field_history_thumb.png
    :alt:

  :doc:`/examples/02-tbrom_examples/07-TBROM_parametric_field_history`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D parametric field history ROM example</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/00-twin_creation/index.rst
   /examples/01-twin_examples/index.rst
   /examples/02-tbrom_examples/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
